# urjc-trains-world

./: CMakeLists.txt  README.md  package.xml
env-hooks/: urjc_trains_world.dsv.in
launch/: urjc_trains.launch.py  urjc_trains_trees.launch.py  view_urjc_trains.launch.py
models/birch/: model.config  model.sdf
models/birch/meshes/: birch.dae  birch.stl
models/ficus/: model.config  model.sdf
models/little_bench/: model.config  model.sdf
models/little_bench/meshes/: little_bench.dae  little_bench.stl
models/picnic_table/: model.config  model.sdf
models/picnic_table/meshes/: picnic_table.dae  picnic_table.stl
models/poplar/: model.config  model.sdf
models/poplar/meshes/: poplar.stl
models/street_lamp/: model.config  model.sdf
models/street_lamp/meshes/: street_lamp.dae  street_lamp.stl
models/train_a/: model.config  model.sdf
models/train_a/meshes/: train_a.dae  train_a.stl
models/train_b/: model.config  model.sdf
models/train_b/meshes/: train_b.stl
models/train_c/: model.config  model.sdf
models/train_c/meshes/: train_c.dae  train_c.stl
models/urjc_trains/: model.config  model.sdf
models/urjc_trains_ground_plane/: model.config  model.sdf
worlds/: urjc_trains.world  urjc_trains_trees.world
